[tool.poetry]
name = "torch-deephash-dataset"
version = "0.1.0"
description = ""
authors = ["nghia-ndx <nghia.ndx@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_deephash_dataset"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
